--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,6 @@
-albucore==0.0.33
 albumentationsx==2.0.9
-annotated-types==0.7.0
-filelock==3.18.0
-fsspec==2025.5.1
-matplotlib==3.10.0
-mpmath==1.3.0
-networkx==3.4.2
 opencv-python==4.11.0.86
-opencv-python-headless==4.12.0.88
-pydantic==2.11.7
-pydantic_core==2.33.2
-PyQt6==6.7.1
-setuptools==72.1.0
-simsimd==6.5.0
-stringzilla==3.12.5
-sympy==1.14.0
 torch==2.7.0
 torchaudio==2.7.0
 torchvision==0.22.0
-tqdm==4.67.1
-typing-inspection==0.4.1
-wheel==0.45.1
+numpy==2.2.5
